--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Ubuntu:wght@400;500;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+body {
+  height: 100vh;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgb(255, 255, 255) 0%,
+    rgb(153, 202, 255) 100%
+  );
 }
