--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,42 +1,41 @@
 .header__container {
-    color: rgb(36, 44, 67);
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 1rem;
-    /* border: 1px solid #fff; */
-    background-color: rgb(255, 255, 255);
-    align-items: center;
+  height: 10vh;
+  color: rgb(255, 255, 255);
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.775);
+  box-shadow: 0 1px 10px rgba(158, 158, 158, 0.255);
 }
 .logo {
-    /* border: 1px solid #fff; */
-    font-size: 1.5rem;
-    align-self: center;
-    text-transform: uppercase;
+  font-size: 1.5rem;
+  align-self: center;
+  text-transform: uppercase;
 }
 .welcome-message__container {
-    font-size: 1.5rem;
-    margin: 0 auto;
+  font-size: 1.5rem;
+  margin: 0 auto;
 }
 .header__buttons--container {
-    display: flex;
-    justify-content: space-between;
-    /* border: 1px solid #fff; */
-    place-content: flex-end;
+  display: flex;
+  justify-content: space-between;
+  place-content: flex-end;
+  font-size: 1rem;
+
 }
 .btn {
-    margin: 0.5rem;
-    /* border: 1px solid #fff; */
-    padding: 0.5rem;
-    border-radius: 5px;
-    font-size: 1rem;
-    background-color: rgba(0, 0, 0, 0.076);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.234);
-    cursor: pointer;
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.076);
+  box-shadow: 0 2px 5px rgba(174, 174, 174, 0.234);
+  cursor: pointer;
 }
 .btn:hover {
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.604);
+  box-shadow: 0 2px 5px rgba(174, 174, 174, 0.604);
 }
 .btn:active {
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.604);
+  box-shadow: 0 2px 2px rgba(174, 174, 174, 0.604);
 }
