--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -1,7 +1,43 @@
 .pagination__container {
-    border: 1px solid #123;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row: auto;
+  border: 1px solid #123;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.arrow__icon {
+    margin: 0 0.5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border: 1px solid rgba(17, 34, 51, 0.213);
+    height: 30px;
+    width: 30px;
+    border-radius: 5px;
+    color: rgba(17, 34, 51, 0.542);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+}
+.arrow__icon:hover {
+    border: 1px solid rgba(12, 46, 79, 0.693);
+    height: 30px;
+    width: 30px;
+    border-radius: 5px;
+    color: rgba(17, 34, 51, 0.542);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+}
+.pagination__btn {
+    margin: 0 0.5rem;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    border: 1px solid rgba(17, 34, 51, 0.241);
+    height: 30px;
+    width: 30px;
+    border-radius: 5px;
+    color: rgba(17, 34, 51, 0.542);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
