--- a/src/components/Data.css
+++ b/src/components/Data.css
@@ -3,6 +3,8 @@
   grid-template-columns: 2fr 7fr;
   grid-template-rows: auto 1fr;
   height: 100%;
+  position: relative;
+
 }
 .data__container--right {
   display: grid;
@@ -42,3 +44,61 @@
   text-align: start;
   padding-left: 2rem;
 }
+
+.add--form__container {
+  /* height: 500px; */
+  width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-60%);
+  background-color: rgb(103, 143, 216);
+  border: 1px solid rgba(17, 34, 51, 0.104);
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+.add-order--title {
+  margin-bottom: 1rem;
+}
+.form-control {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+  background-color: rgba(65, 87, 253, 0.46);
+  width: 100%;
+}
+.form-control input, select{
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+.form--buttons__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  justify-items: center;
+}
+.form-btn {
+  bordeR: 1px solid #123;
+  padding: 0.5rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  font-weight:  400;
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+.form-btn:hover {
+  box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+} 
+.form-btn:active {
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+} 
