--- a/src/components/Data.css
+++ b/src/components/Data.css
@@ -3,8 +3,6 @@
   grid-template-columns: 3fr 7fr;
   grid-template-rows: auto 1fr;
   height: 100%;
-  position: relative;
-
 }
 .data__container--right {
   display: grid;
@@ -31,6 +29,10 @@
   align-items: center;
   border-bottom: 1px solid #123;
 }
+
+.data__row--right, .data__row--left {
+  font-weight: 400;
+}
 .operations__container {
   display: flex;
   justify-content: space-between;
@@ -55,6 +57,12 @@
   text-align: center;
   padding: 1rem 0;
   overflow-y: scroll;
+  border-right: 1px solid #123;
+}
+.row__user--name {
+  /* text-align: center; */
+  padding: 1rem 0;
+
 }
 .input__checkbox {
   margin: 0 auto;
@@ -71,7 +79,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-60%);
+  transform: translate(-50%,-50%);
   background-color: rgb(103, 143, 216);
   border: 1px solid rgba(17, 34, 51, 0.104);
   border-radius: 10px;
@@ -108,13 +116,15 @@
   justify-items: center;
 }
 .form-btn {
-  bordeR: 1px solid #123;
+  border: none;
   padding: 0.5rem;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   font-weight:  400;
   box-shadow: 0px 5px 5px rgba(0,0,0,0.5);
   cursor: pointer;
+  outline: none;
+  font-weight: 700;
 }
 .form-btn:hover {
   box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
@@ -122,3 +132,11 @@
 .form-btn:active {
   box-shadow: 0px 2px 2px rgba(0,0,0,0.8);
 } 
+
+.modal-overlay {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  background: linear-gradient(180deg ,rgba(0, 0, 0, 0.939), rgb(255, 255, 255));
+  filter: blur(1px);
+}
