implement sign in form, blur overlay and change the color scheme of the hero section UI

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,12 +1,11 @@
 .header__container {
-  height: 10vh;
   color: rgb(255, 255, 255);
   display: grid;
   gap: 1rem;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.515);
+  background-color: rgb(2, 0, 0);
   box-shadow: 0 1px 10px rgba(158, 158, 158, 0.255);
 }
 .logo {
