--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,13 @@ body {
   height: 100vh;
   font-family: "Ubuntu", sans-serif;
   font-weight: 500;
-  background: rgb(255, 255, 255);
+  /* background: rgb(255, 255, 255); */
   background: linear-gradient(
-    180deg,
-    rgb(0, 0, 0) 0%,
-    rgb(0, 123, 255) 100%
+    90deg,
+    rgba(61, 188, 226, 0.7),
+    rgba(214, 61, 61, 0.7)
   );
   background-size: cover;
   background-position: center;
   position: relative;
 }
-
