--- a/src/components/Toprow.css
+++ b/src/components/Toprow.css
@@ -1,70 +1,92 @@
 .toprow__container {
-    /* height: 10vh; */
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr 1fr;
-    border: 1px solid #123;
-    align-items: center;
-    padding: 0.25rem;
-  }
-  .toprow__searchbar--container {
-    padding: 0.25rem 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    /* border: 1px solid #123; */
-  
-  }
-  .searchbar__form {
-    padding-left: 1rem;
-    display: grid;
-    grid-template-columns: 1.3fr 5fr;
-    align-items: center;
-    /* border: 1px solid #123; */
-    width: 45%;
-  }
-  .search__icon {
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 1.2rem;
-    
-  }
-  .search__icon:hover {
-    transform: scale(1.1);
-  }
-  .searchbar__input {
-    padding: 0.5rem;
-    border: none;
-    width: 0%;
-    transition: 0.4s ease-in;
-    border-bottom: 1px solid rgba(61, 61, 63, 0.364);
-    opacity: 0;
-  }
-  
-  .searchbar__input.active {
-    padding: 0.5rem;
-    width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.364);
-    opacity: 1;
-    outline: none;
-  }
-  
-  .toprow__operations--container {
-    display: flex;
-    /* border: 1px solid #123; */
-    justify-content: flex-end;
-  }
-  .operations-btn {
-    border: 1px solid rgba(17, 34, 51, 0.26);
-    font-weight: 400;
-    width: 65px;
-    text-align: center;
-    padding: 0.25;
-    color: rgba(17, 34, 51, 0.796);
-    background-color: rgba(255, 255, 255, 0.213);
-  }
-  .sort__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  /* height: 10vh; */
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+  border: 1px solid #123;
+  align-items: center;
+  padding: 0.25rem;
+}
+.toprow__container.sort-options {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.toprow__searchbar--container {
+  padding: 0.25rem 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  /* border: 1px solid #123; */
+}
+.searchbar__form {
+  padding-left: 1rem;
+  display: grid;
+  grid-template-columns: 1.3fr 5fr;
+  align-items: center;
+  /* border: 1px solid #123; */
+  width: 45%;
+}
+.search__icon {
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 1.2rem;
+}
+.search__icon:hover {
+  transform: scale(1.1);
+}
+.searchbar__input {
+  padding: 0.5rem;
+  border: none;
+  width: 0%;
+  transition: 0.4s ease-in;
+  border-bottom: 1px solid rgba(61, 61, 63, 0.364);
+  opacity: 0;
+}
+
+.searchbar__input.active {
+  padding: 0.5rem;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.364);
+  opacity: 1;
+  outline: none;
+}
+
+.toprow__operations--container {
+  display: grid;
+  grid-template-columns: repeat(4, 100px);
+  place-content: flex-end;
+}
+.operations-btn {
+  border: 1px solid rgba(17, 34, 51, 0.26);
+  font-weight: 400;
+  /* width: 65px; */
+  text-align: center;
+  padding: 0.25;
+  color: rgba(17, 34, 51, 0.796);
+  background-color: rgba(255, 255, 255, 0.213);
+}
+.sort__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.sort__options--icon {
+  margin-left: 0.25rem;
+}
+.sort__options--icon.right {
+  transform: rotate(-90deg);
+  transition: 0.5s ease;
+}
+
+/* Sort Options Menu Card */
+
+.sort__options--container {
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  font-size: 0.8rem;
+  transition: 0.4s;
+}
+.sort__option {
+  font-weight: 700;
+}
